--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -156,6 +156,8 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  --container-8xl: 90rem;
 }
 
 @layer base {
