--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 
 @import './animations.css';
 @import './utils.css';
+@import './shiki.css';
 
 @plugin "@tailwindcss/typography";
 @config "../config/tailwind/typography.ts";
