--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -134,18 +134,12 @@
   --color-card-foreground: var(--card-foreground);
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
-  --color-primary: var(--primary-main);
-  --color-primary-active: var(--primary-active);
-  --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
   --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
   --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
-  --color-danger: var(--danger-main);
-  --color-danger-active: var(--danger-active);
-  --color-danger-foreground: var(--danger-foreground);
   --color-border: var(--border);
   --color-input: var(--input);
   --color-ring: var(--ring);
@@ -154,6 +148,18 @@
   --color-chart-3: var(--chart-3);
   --color-chart-4: var(--chart-4);
   --color-chart-5: var(--chart-5);
+  
+  --color-primary: var(--primary-main);
+  --color-primary-active: var(--primary-active);
+  --color-primary-foreground: var(--primary-foreground);
+
+  --color-neutral: var(--neutral-main);
+  --color-neutral-active: var(--neutral-active);
+  --color-neutral-foreground: var(--neutral-foreground);
+
+  --color-danger: var(--danger-main);
+  --color-danger-active: var(--danger-active);
+  --color-danger-foreground: var(--danger-foreground);
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
